--- a/Demo1/index.html
+++ b/Demo1/index.html
@@ -33,6 +33,26 @@
 				</div>
 			</div>
 		</div>
+		<div style="display:none;" id="twitter-ad2">
+			<div style="padding:0;margin:0;height:100%">
+				<div class="tweet-header row">
+					<img alt="twitter-logo" src="images/twitter.png" height="40%" style="display: inline-block;">
+					<div style="display: inline-block;vertical-align:middle;" id="tweet-at"></div>
+				</div>
+				<div class="tweet-content row" style="padding:0;margin:0">
+					<div class="tweet-by" id="tweet-by"></div>
+					<div class="tweet-body" id="tweet-body"></div> 
+					<div class="tweet-users" >
+						<div class="users">
+							<img src="images/user1.png" width="100">
+							<img src="images/user2.png" width="100">
+							<img src="images/user3.png" width="100">
+							<p>Just now via Twitter<p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<footer>
 		<script src="js/jquery-1.10.2.min.js"></script>
